--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @theme {
-  --font-poppins: Poppins, sans-serif;
+  --font-montserrat: Montserrat, sans-serif;
   --color-purple: rgb(96,89,247);
 }
