Work on Landing Pages

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@
 @theme {
   --font-montserrat: Montserrat, sans-serif;
   --color-purple: rgb(96,89,247);
+  --color-blue: rgb(5,0,113);
+  --color-yellow: rgb(255,194,36);
 }
